--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
         <br>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Domain-specific languages for optimization</h3>
+            <h3 class="mb-0">AIOps</h3>
             <ul>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/convexjl.html">Convex Optimization in Julia</a>. M. Udell, K. Mohan, D. Zeng, J. Hong, S. Diamond, and S. Boyd. Proceedings of the Workshop for High Performance
-Technical Computing in Dynamic Languages, 2014. <br></p>
+<li><p><a href="http://">AIOps</a>. <br></p>
 </li>
 </ul>
           </div>
@@ -107,7 +106,7 @@ Technical Computing in Dynamic Languages, 2014. <br></p>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Finance</h3>
+            <h3 class="mb-0">smart city</h3>
 <ul>
 <li><p><a href="http://stanford.edu/~boyd/papers/cvx_portfolio.html">Multi-Period Trading via Convex Optimization</a>. S. Boyd, E. Busseti, S. Diamond, R. Kahn, K. Koh, P. Nystrup, and J. Speth. Foundations and Trends in Optimization, 3(1):1–76, 2017. <br></p>
 </li>
@@ -154,40 +153,19 @@ Technical Computing in Dynamic Languages, 2014. <br></p>
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="publications">
       <div class="w-100">
         <h2 class="mb-5">Publications</h2>
-<p><a href="https://stacks.stanford.edu/file/druid:tq788ns0013/Diamond-thesis%20copy-augmented.pdf">Thesis: Domain-Specific Languages for Convex and Non-Convex Optimization</a><br></p>
+<p><a href="https://ruor.uottawa.ca/bitstream/10393/32184/1/Wang_Xiaoguang_2015_thesis.pdf">Thesis: Design and Analysis of Techniques for Multiple-Instance Learning in the Presence of Balanced and Skewed Class Distributions </a><br></p>
 
-        For a complete list, see <a href="https://scholar.google.com/citations?user=mYroQikAAAAJ&amp;hl=en">Google Scholar</a>. 
+        For a complete list, see <a href="https://scholar.google.ca/citations?user=Y-y7CMUAAAAJ&hl=en">Google Scholar</a>. 
         <br><br>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Domain-specific languages for optimization</h3>
+            <h3 class="mb-0">Articles published or accepted in refereed Journals</h3>
             <ul>
-<li><p><a href="https://web.stanford.edu/~boyd/papers/cvxpygen.html">Embedded Code Generation with CVXPY</a>. M. Schaller, G. Banjac, S. Diamond, A. Agrawal, B. Stellato, and S. Boyd, IEEE Control Systems Letters, 2022. <br></p>
+<li><p><a href="https://www.site.uottawa.ca/~nat/Papers/Wang-et-al-2014.pdf">Automatic Target Recognition Using Multiple-Aspect Sonar Images.</a> Journal of Artificial Intelligence and Soft Computing Research. 12 pages. (2014). Wang, X., Liu, X., Japkowicz, N., & Matwin, S.<br></p>
 </li>
-<li><p><a href="https://arxiv.org/pdf/2001.03649.pdf">Log-Linear Dynamical Systems</a>. S. Diamond, Preprint, 2020. <br></p>
+<li><p><a href="https://www.site.uottawa.ca/~nat/Papers/29-Wang.pdf">Boosting support vector machines for imbalanced data sets. </a> Knowl. Inf. Syst. 25(1): 1-20 (2010). Wang, X., Japkowicz, N.<br></p>
 </li>
-<li><p><a href="https://stanford.edu/~boyd/papers/pdf/diff_cvxpy.pdf">Differentiable Convex Optimization Layers</a>. A. Agrawal, B. Amos, S. Barrat, S. Boyd, S. Diamond, and J. Z. Kolter, Advances in Neural Information Processing Systems, 2019. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/pdf/dgp.pdf">Disciplined Geometric Programming</a>. A. Agrawal, S. Diamond, and S. Boyd, Optimization Letters, March 2019. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/cvxpy_rewriting.html">A Rewriting System for Convex Optimization Problems</a> A. Agrawal, R. Verschueren, S. Diamond, and S. Boyd, Journal of Control and Decision, 5(1):42–60, 2018. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/ncvx.html">A General System for Heuristic Minimization of Convex Functions over Nonconvex Sets</a>. S. Diamond, R. Takapoui, and S. Boyd. Optimization Methods and Software, 33(1):165–193, 2018. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/dmcp.html">Disciplined Multi-Convex Programming</a>. X. Shen, S. Diamond, Y. Gu, and S. Boyd. Proceedings of Chinese Conference on Decision and Control, 2017. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/snapvx.html">SnapVX: A Network-Based Convex Optimization Solver</a>. D. Hallac, C. Wong, S. Diamond, R. Sosic, S. Boyd, and J. Leskovec. Journal of Machine Learning, 18(4):1−5, 2017. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/cvxflow.html">A New Architecture for Optimization Modeling Frameworks</a>. M. Wytock, S. Diamond, F. Heide, and S. Boyd. Proceedings of the Workshop on Python for High-Performance and Scientific Computing, 2016. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/dccp.html">Disciplined Convex-Concave Programming</a>. X. Shen, S. Diamond, Y. Gu, and S. Boyd. Proceedings of CDC, 2016. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/cvxpy_paper.html">CVXPY: A Python-Embedded Modeling Language for Convex Optimization</a>. S. Diamond and S. Boyd. Journal of Machine Learning Research, 17(83):1-5, 2016. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/dcsp.html">Disciplined Convex Stochastic Programming: A New Framework for Stochastic Optimization</a>. A. Ali, Z. Kolter, S. Diamond, and S. Boyd. Proceedings of the Conference on Uncertainty in Artificial Intelligence, 2015. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/convexjl.html">Convex Optimization in Julia</a>. M. Udell, K. Mohan, D. Zeng, J. Hong, S. Diamond, and S. Boyd. Proceedings of the Workshop for High Performance
-Technical Computing in Dynamic Languages, 2014. <br></p>
+<li><p><a href="https://journalofbigdata.springeropen.com/articles/10.1186/s40537-015-0021-4">Meta-MapReduce for Scalable Data Mining. </a> Journal of Big Data. 12 pages. (2015) Wang, X., Japkowicz, N. Liu, X., Wang, X., Matwin, S., & Japkowicz, N.<br></p>
 </li>
 </ul>
           </div>
@@ -195,66 +173,45 @@ Technical Computing in Dynamic Languages, 2014. <br></p>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Finance</h3>
+            <h3 class="mb-0">Papers in refereed conference proceedings</h3>
 <ul>
-<li><p><a href="https://web.stanford.edu/~boyd/papers/saa_with_alts.html">Strategic Asset Allocation with Illiquid Alternatives</a>. E. Luxenberg, S. Boyd, M. Kochenderfer, M. Van Beek, W. Cao, S. Diamond, A. Ulitsky, K. Menda, and V. Vairamurthy. Proceedings of the ACM International Conference on AI in Finance, 249-256, 2022.
-</p></li><li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3855696">Optimal Claiming of Social Security Benefits</a>. S. Diamond, S. Boyd, D. Greenberg, M. Kochenderfer, and A. Ang. In Submission, 2021. <br></p>
-</li>
-<li><p><a href="http://stanford.edu/~boyd/papers/cvx_portfolio.html">Multi-Period Trading via Convex Optimization</a>. S. Boyd, E. Busseti, S. Diamond, R. Kahn, K. Koh, P. Nystrup, and J. Speth. Foundations and Trends in Optimization, 3(1):1–76, 2017. <br></p>
-</li>
+<li><p><a href="https://scholar.google.ca/scholar?oi=bibs&cluster=14979774336701056283&btnI=1&hl=en">A Multi-View Two-level Classification Method for Generalized Multi-instance Problems.</a>. Wang, X., Liu, X., Matwin, S. & Japkowicz, N., Guo, H. 2014 IEEE International Conference on Big Data, 104-111.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/7004464">Vessel Route Anomaly Detection with Hadoop MapReduce.</a>. Wang, X., Liu, X., Bo Liu, Erico N. de Souza & Matwin, S. 2014 IEEE International Conference on Big Data, 25-30.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/7004364">Applying Instance-weighted Support Vector Machines to Class Imbalanced Datasets.</a>. Wang, X., Liu, X., Matwin, S. & Japkowicz, N. 2014 IEEE International Conference on Big Data, 112-118.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/7004467"> A Distributed Instance-weighted SVM Algorithm on Large-scale Imbalanced Datasets.</a>. Wang, X., Liu, X. & Matwin, S. 2014 IEEE International Conference on Big Data, 45-51.
+</p></li>
+<li><p><a href="https://www.site.uottawa.ca/~nat/Papers/Wang-et-al-2014.pdf"> Automatic Target Recognition using multiple-aspect sonar images.</a>. Wang, X., Liu, X., Japkowicz, N., Matwin, S. & Nguyen B. IEEE Congress on Evolutionary Computation 2014: 2330-2337.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/6754004"> Resampling and Cost-Sensitive Methods for Imbalanced Multi-instance Learning.</a>. Wang, X., Liu, X., Japkowicz, N., & Matwin, S. 2013 IEEE International Conference on Data Mining (ICDM), 9 pages.
+</p></li>
+<li><p><a href="https://link.springer.com/chapter/10.1007/978-3-319-06483-3_21"> Ensemble of Multiple Kernel SVM Classifiers.</a>. Wang, X., Liu, X., Japkowicz, N., & Matwin, S. Canadian Conference on AI 2014: 239-250.
+</p></li>
+<li><p><a href="https://link.springer.com/chapter/10.1007/978-3-642-38457-8_15"> Cost-Sensitive Boosting Algorithms for Imbalanced Multi-instance Datasets.</a>. Wang, X., Matwin, S., Japkowicz, N., & Liu, X. In Advances in Artificial Intelligence (pp. 174-186). Springer Berlin Heidelberg.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/6691741"> Meta-learning for Large Scale Machine Learning with MapReduce.</a>. Wang, X., Matwin, S., Japkowicz, N., & Liu, X. 2013 IEEE International Conference on Big Data, 6 pages.
+</p></li>
+<li><p><a href="https://link.springer.com/chapter/10.1007/978-3-642-38457-8_27"> An Ensemble Method Based on AdaBoost and Meta-Learning.</a>. Liu, X., Wang, X., Japkowicz, N., & Matwin, S. In Advances in Artificial Intelligence (pp.278-285). Springer Berlin Heidelberg.
+</p></li>
+<li><p><a href="https://ieeexplore.ieee.org/document/6406731"> Using SVM with Adaptively Asymmetric Misclassification Costs for Mine-Like Objects Detection.</a>. Wang, X., Shao, H., Japkowicz, N., Matwin, S., Liu, X., Bourque, A., & Nguyen, B. (2012). In Machine Learning and Applications (ICMLA), 2012 11th International Conference on (Vol. 2, pp. 78-82). IEEE.
+</p></li>
+<li><p><a href="https://www.site.uottawa.ca/~nat/Papers/29-Wang.pdf"> Boosting Support Vector Machines for Imbalanced Data Sets. </a>. Wang, X., Japkowicz, N. (2012). ISMIS 2008: 38-47 (The Best Paper Award).
+</p></li>
 </ul>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+		     <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Matrix-free optimization</h3>
-<ul>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/mf_equil.html">Stochastic Matrix-Free Equilibration</a>. S. Diamond and S. Boyd. Journal of Optimization Theory and Applications, 172(2), 436-454, 2016. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/abs_ops.html">Matrix-free Convex Optimization Modeling</a>. S. Diamond and S. Boyd. In: Boris Goldengorin (Ed.). Optimization and Its Applications in Control and Data Sciences: in Honor of Boris T. Polyak’s 80th Birthday. Springer Optimization and Its Applications, Vol. 115, Pages 221-264, Springer, New York, 2016. <br></p>
-</li>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/abs_ops.html">Convex Optimization with Abstract Linear Operators</a>. S. Diamond and S. Boyd. Proceedings of ICCV, 2015. <br></p>
+            <h3 class="mb-0">Book Chapters</h3>
+            <ul>
+<li><p><a href="https://sciendo.com/article/10.1515/jaiscr-2015-0004">Automated Mine-like Objects Recognition Using Instance-weighted Boosting SVM on Imbalanced Multiple Instance Dataset. </a> Wang, X., Liu, X., Japkowicz, N., & Matwin, S. (2015). Recent Advances in Computational Intelligence in Defense and Security. Submitted, 30 pages.<br></p>
 </li>
 </ul>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Computational imaging</h3>
-<ul>
-<li><p><a href="http://www.computationalimaging.org/publications/non-line-of-sight-imaging-with-partial-occluders-and-surface-normals/">Non-line-of-sight Imaging with Partial Occluders and Surface Normals</a>. F.
-Heide, M. O’Toole, K. Zang, D. Lindell, S. Diamond and G. Wetzstein. ACM
-Transactions on Graphics, 2019.<br></p>
-</li>
-<li><p><a href="http://www.computationalimaging.org/publications/end-to-end-optimization-of-optics-and-image-processing-for-achromatic-extended-depth-of-field-and-super-resolution-imaging/">End-to-end Optimization of Optics and Image Processing for Achromatic Extended Depth of Field and Super-resolution Imaging</a>. V. Sitzmann, S. Diamond, Y. Peng, X. Dun, S. Boyd, W. Heidrich, F. Heide, and G. Wetzstein, ACM SIGGRAPH, 2018. <br></p>
-</li>
-<li><p><a href="http://www.computationalimaging.org/publications/sub-picosecond-photon-efficient-3d-imaging-using-single-photon-sensors/">Sub-picosecond photon-efficient 3D imaging using single-photon sensors</a>. F. Heide, S. Diamond, D. Lindell, and G. Wetzstein, Scientific Reports, 2018. <br></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1705.08041">Unrolled Optimization with Deep Priors</a>. S. Diamond, V. Sitzmann, F. Heide, and G. Wetzstein, Preprint, 2017. <br></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1701.06487">Dirty Pixels: Towards End-to-End Image Processing and Perception</a>. S. Diamond, V. Sitzmann, F. Julca-Aguilar, S. Boyd, G. Wetzstein, and F. Heide, ACM Transactions on Graphics, 2021. <br></p>
-</li>
-<li><p><a href="http://www.computationalimaging.org/publications/reconstructing-transient-images-from-single-photon-sensors-cvpr-2017/">Reconstructing Transient Images from Single-Photon Sensors</a>. M. O'Toole, F. Heide, D. Lindell, K. Zang, S. Diamond, and G. Wetzstein. Proceedings of CVPR, 2017. <br></p>
-</li>
-<li><p><a href="https://stevendiamond.me/pdf/proximal.pdf">ProxImaL: Efficient Image Optimization Using Proximal Algorithms</a>. F. Heide, S. Diamond, M. Niessner, J. Ragan-Kelley, W. Heidrich, and G. Wetzstein. Proceedings of ACM SIGGRAPH, 2016. <br></p>
-</li>
-</ul>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Other optimization applications</h3>
-<ul>
-<li><p><a href="https://stanford.edu/~boyd/papers/net_opt.html">Network Optimization for Unified Packet and Circuit Switched Networks</a>. P. Yin, S. Diamond, B. Lin, and S. Boyd. Optimization and Engineering, 21(1):159–180, 2020. <br></p>
-</li>
-</ul>
-          </div>
-        </div>
-
-      </div>
+  </div>
 
     </section>
 
@@ -269,40 +226,10 @@ Transactions on Graphics, 2019.<br></p>
             <h3 class="mb-0">CVXPY</h3>
             <ul>
               <li><p><a href="https://www.cvxpy.org/">CVXPY</a> is an open-source modeling framework for convex optimization in Python, with tens of thousands of individual users.</p></li>
-              <li><p>Major corporate <a href="https://www.cvxpy.org/">CVXPY</a> users include Tesla, Netflix, BlackRock, Two Sigma, and Intuit.</p></li>
-              <li><p><a href="https://www.cvxpy.org/">CVXPY</a> has also been used to teach classes at Stanford, CMU, MIT, Berkeley, UCLA, and other universities.</p></li>
+             
             </ul>
           </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Other software</h3>
-            <ul>
-<!-- <li><p><a href="https://github.com/mfopt/mf_cvxpy">A matrix-free version of CVXPY</a> to accompany the paper &ldquo;Matrix-free Convex Optimization Modeling&rdquo;.</p> -->
-<!-- </li> -->
-<!-- <li><p><a href="https://github.com/mfopt/mf_scs">A matrix-free version of SCS</a> to accompany the paper &ldquo;Matrix-free Convex Optimization Modeling&rdquo;.</p> -->
-<!-- </li> -->
-<!-- <li><p><a href="https://github.com/mfopt/mf_pogs">A matrix-free version of POGS</a> to accompany the paper &ldquo;Convex Optimization with Abstract Linear Operators&rdquo;.</p> -->
-<!-- </li> -->
-<!-- <li><p><a href="https://github.com/mfopt/FAO_DAG">A package</a> that integrates matrix-free CVXPY and the matrix-free solvers.</p> -->
-<!-- </li> -->
-<li><p><a href="https://github.com/cvxgrp/dccp">DCCP</a>, a CVXPY extension for difference-of-convex programming.</p>
-</li>
-<li><p><a href="https://github.com/cvxgrp/ncvx">NCVX</a>, a CVXPY extension for heuristic solution of nonconvex problems.</p>
-</li>
-<li><p><a href="https://github.com/cvxgrp/dmcp">DMCP</a>, a CVXPY extension for multi-convex programming.</p>
-</li>
-<li><p><a href="http://www.proximal-lang.org/">ProxImaL</a>, a domain-specific language for image optimization.</p>
-</li>
-<li><p><a href="http://dcp.stanford.edu/">dcp.stanford.edu</a>, an online visualization tool for disciplined convex programming.</p>
-</li>
-<!-- <li><p><a href="https://github.com/mwytock/cvxflow">cvxflow</a>, a TensorFlow backend for CVXPY.</p> -->
-<!-- </li> -->
-            </ul>
-          </div>
-        </div>
-
+        </div>   
       </div>
     </section>
 
