--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger active" href="#publications">Publications</a>
         </li>
+		<li class="nav-item">
+          <a class="nav-link js-scroll-trigger active" href="#patents">Patents</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#software">Software</a>
         </li>
@@ -108,37 +111,7 @@
           <div class="resume-content">
             <h3 class="mb-0">smart city</h3>
 <ul>
-<li><p><a href="http://stanford.edu/~boyd/papers/cvx_portfolio.html">Multi-Period Trading via Convex Optimization</a>. S. Boyd, E. Busseti, S. Diamond, R. Kahn, K. Koh, P. Nystrup, and J. Speth. Foundations and Trends in Optimization, 3(1):1–76, 2017. <br></p>
-</li>
-</ul>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Matrix-free optimization</h3>
-<ul>
-<li><p><a href="http://web.stanford.edu/~boyd/papers/abs_ops.html">Convex Optimization with Abstract Linear Operators</a>. S. Diamond and S. Boyd. Proceedings of ICCV, 2015. <br></p>
-</li>
-</ul>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Computational imaging</h3>
-<ul>
-<li><p><a href="https://stevendiamond.me/pdf/proximal.pdf">ProxImaL: Efficient Image Optimization Using Proximal Algorithms</a>. F. Heide, S. Diamond, M. Niessner, J. Ragan-Kelley, W. Heidrich, and G. Wetzstein. Proceedings of ACM SIGGRAPH, 2016. <br></p>
-</li>
-</ul>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Other optimization applications</h3>
-<ul>
-<li><p><a href="https://stanford.edu/~boyd/papers/net_opt.html">Network Optimization for Unified Packet and Circuit Switched Networks</a>. P. Yin, S. Diamond, B. Lin, and S. Boyd. Optimization and Engineering, 21(1):159–180, 2020. <br></p>
+<li><p><br></p>
 </li>
 </ul>
           </div>
@@ -214,7 +187,44 @@
   </div>
 
     </section>
+	  
+<hr class="m-0">
 
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="patents">
+      <div class="w-100">
+        <h2 class="mb-5">Patents</h2>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+           <ul>
+              <li><p><a href="https://patents.google.com/patent/CN107301577A/en">Training method, credit estimation method and the device of credit evaluation model.</a> Patent number : CN107301577A</p></li>
+              <li><p><a href="https://patents.google.com/patent/CN106909981B/en">Model training method, sample balancing method, model training device, sample balancing device and personal credit scoring system</a> Patent number : CN106909981B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107229966B/en">Model data updating method, device and system</a> Patent number : CN107229966B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106934413A/en">Model training method, apparatus and system and sample set optimization method, device</a> Patent number : CN106934413A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106779272A/en">A kind of Risk Forecast Method and equipment</a> Patent number : CN106779272A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN108205525B/en">Method and device for determining user intention based on user voice information</a> Patent number : CN108205525B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107203774A/en">The method and device that the belonging kinds of data are predicted</a> Patent number : CN107203774A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106934410A/en">The sorting technique and system of data</a> Patent number : CN106934410A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106997484A/en">A kind of method and device for optimizing user credit model modeling process</a> Patent number : CN106997484A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107169571A/en">A kind of Feature Selection method and device</a> Patent number : CN107169571A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107168965B/en">Feature engineering strategy determination method and device</a> Patent number : CN107168965B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106997472A/en">User characteristics sorting technique, user credit appraisal procedure and the device of user credit model</a> Patent number : CN106997472A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106874286A/en">A kind of method and device for screening user characteristics</a> Patent number : CN106874286A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107133207A/en">A kind of information extracting method and device</a> Patent number : CN107133207A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106897282B/en">User group classification method and device</a> Patent number : CN106897282B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN107203916B/en">User credit model establishing method and device</a> Patent number : CN107203916B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN106874925A/en">object grouping method, model training method and device</a> Patent number : CN106874925A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN112182077B/en">Intelligent operation and maintenance system based on data middling platform technology</a> Patent number : CN112182077B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN112181960B/en">Intelligent operation and maintenance framework system based on AIOps</a> Patent number : CN112181960B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN111535099B/en">Three-dimensional microscopic road network generation method capable of realizing real-time interaction</a> Patent number : CN111535099B</p></li>
+			   <li><p><a href="https://patents.google.com/patent/https://patents.google.com/patent/CN113360358A/en">Method and system for adaptively calculating IT intelligent operation and maintenance health index</a> Patent number : CN113360358A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/https://patents.google.com/patent/CN113360722A/en">Fault root cause positioning method and system based on multidimensional data map</a> Patent number : CN113360722A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN112783865A/en">Semi-supervised man-machine combined operation and maintenance fault library generation method and system</a> Patent number : CN112783865A</p></li>
+			   <li><p><a href="https://patents.google.com/patent/CN113157204B/en">Disk capacity prediction method for identifying manual cleaning behavior based on second-order difference method</a> Patent number : CN113157204B</p></li>
+			   
+            </ul>
+          </div>
+        </div>
+   </div></section>
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="software">
@@ -225,7 +235,7 @@
           <div class="resume-content">
             <h3 class="mb-0">CVXPY</h3>
             <ul>
-              <li><p><a href="https://www.cvxpy.org/">CVXPY</a> is an open-source modeling framework for convex optimization in Python, with tens of thousands of individual users.</p></li>
+              <li><p><a href="">CVXPY</a> is an open-source modeling framework for convex optimization in Python, with tens of thousands of individual users.</p></li>
              
             </ul>
           </div>
@@ -238,35 +248,23 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="teaching">
       <div class="w-100">
         <h2 class="mb-5">Teaching</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Head instructor</h3>
             <ul>
-              <li><p>Convex Optimization I, Stanford University (EE364a), Sum 2019.</p></li>
-              <li><p>Convex Optimization Short Course, ShanghaiTech, Shanghai, Spr 2016.</p>
+              <li><p></p></li>
+              <li><p></p>
               </li>
             </ul>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Co-instructor</h3>
-            <ul>
-              <li><p>Convex Optimization Short Course, IMT, Lucca, Spr 2016.</p></li>
-              <li><p>Convex Optimization Short Course, CUHKSZ, Shenzhen, Spr 2016.</p></li>
-            </ul>
-          </div>
-        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Teaching assistant</h3>
             <ul>
-              <li><p>Convex Optimization II, Stanford University (EE364b), Spr 2019.</p></li>
-              <li><p>Convex Optimization I, Stanford University (EE364a), Win 2019.</p></li>
-              <li><p>Artificial Intelligence, Stanford University (CS221), Fall 2018.</p></li>
+              <li><p></p></li>
             </ul>
           </div>
         </div>
