--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <h3 class="mb-0"><li><a href="AIOps.html">AIOps</a> <br>
 </li></h3><br>
             <h3 class="mb-0"><li><a href="zhima.html">Zhima Credit</a> <br>
+</li></h3><br>
+			  <h3 class="mb-0"><li><a href="https://www.alibabacloud.com/product/machine-learning?spm=a2c65.11461447.0.0.25e81730edi6lR">Alibaba Platform for AI</a> <br>
 </li></h3>
           </div>
         </div>
