--- a/PAI.html
+++ b/PAI.html
@@ -59,7 +59,9 @@
             <ul>
 				
 	 <p><a href="https://www.alibabacloud.com/product/machine-learning?spm=a2c65.11461447.0.0.25e81730edi6lR">Alibaba PAI</a>. Alibaba PAI is a machine learning platform for AI based on Ali cloud, which is one of the leading cloud platforms for machine learning in China. It provides all in one machine learning solutions, and provides low threshold. High-performance services include traditional machine learning and deep learning . For machine learning, PAI covers a very comprehensive function as shown, including data pre-processing, feature engineering, automatic parameter adjustment, online prediction, and so on. If you want to implement a complete machine learning task, PAI can cover almost every aspect of it. </p>
-
+<ul>
+  <img src="images/pai_framework.png" width="711" height="384" alt=""/>
+</ul>
 <p>Next, we introduce four basic components of PAI. PAI studio, PAI DSW PAI EAS, and PAI auto learning. PAI studio is used for visual development. Users can build models by dragging and dropping components on the visual interface. Achieving one key training and model evaluating. In the meantime, PAI studio provides multiple templates of solutions on image classification, text classification, commodity recommendation, etc., which can be quickly applied into practice.</p> 
 
 <p>PAI DSW is a cloud-based machine learning development IDE that provides an interactive programming environment. PAI-AutoLearning is an automatic machine learning platform which supports online labeling, automatic model training, superparameter optimization, and model evaluation, etc. Helping users achieve better training results with only a small amount of data. PAI EAS is an online prediction service for online reasoning scenarios to facilitate quick development and application of the model to the business. PAI supports the use of these services individually or in combination. As long as the training data is prepared, all the modeling tasks can be done through PAI to achieve one stop machine learning.</p>
