--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 		<li class="nav-item">
           <a class="nav-link js-scroll-trigger active" href="#projects">Projects</a>
         </li>
+		<li class="nav-item">
+          <a class="nav-link js-scroll-trigger active" href="#research">Research</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger active" href="#publications">Publications</a>
         </li>
@@ -113,6 +116,25 @@
 
     </section>
 
+	  <hr class="m-0">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="research">
+      <div class="w-100">
+        <h2 class="mb-5">Research</h2>
+        <br>
+		  <p class="lead mb-5">My research focus on imbalanced learning and multiple instance learning.
+			  Here are githubs about these two topics：
+			  </p>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-multiple-instance-learning">Everything about multiple instance learning</a> <br>
+</li></h3><br>
+            <h3 class="mb-0"><li><a href="https://github.com/fridaymonday123/everything-about-imbalanced-learning">Everything about imbalanced learning</a> <br>
+</li></h3><br>			 
+          </div>
+        </div>
+    </div>
+
+    </section>
     <hr class="m-0">
 	  
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="publications">
